--- a/html/index.html
+++ b/html/index.html
@@ -165,8 +165,8 @@
         </section>
         <footer class="footer1">
             <div class="footer-hp">   
-                <h3 class="ft-head">Panda Gaming</h3>
-                <p class="ft-pass">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+                <h3 class="ft-head">Panda <span class="ft-span">Gaming</span></h3>
+                <p class="ft-pass">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
             </div> 
             <div>
                 <ul class="footer-link">
