some change all section

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
         <div class="banner1">
             <h3 class="banner-heading1">Buy Free Fire Diamond and Pubg Uc <br> Lowrate in Bangladesh</h3>
             <ul class="banner-button1">
-                <li><a href=""><button class="nav-button2">Stay Focused</button></a></li>
+                <li><a href=""><button class="nav-button2">Buy Now</button></a></li>
             </ul>
         </div>
     </header>
@@ -27,7 +27,7 @@
                 <h3 class="section-heading1">Free Fire Diamond</h3>
                 <p class="section-pass1">Buy Free Fire Diamond Lowrate in Bangladesh</p>
                 <ul class="section-button">
-                    <li><a href=""><button class="section-button1">Launch Live Preview</button></a></li>
+                    <li><a href=""><button class="section-button1">Buy Free Fire Diamond</button></a></li>
                 </ul>
             </div>
             <div class="section-img">
@@ -134,10 +134,10 @@
         <!-- Section 3 -->
 
         <section class="section-3">
-            <h3 class="sec3-heading">Ready to focus better</h3>
-            <p class="sec3-pass">This template instantly leveled up our presence.” – Studio Vertex</p>
+            <h3 class="sec3-heading">Best Diamond Topup Page BD</h3>
+            <p class="sec3-pass">Low Rate Price in Bangladesh and Instant Delivery</p>
             <ul class="sec3-bb">
-                <li><a href=""><button class="sec3-button">Get Started Free</button></a></li>
+                <li><a href=""><button class="sec3-button">Shop Now</button></a></li>
             </ul>
             <div>
                 <img class="sec3-img" src="/Picture/Assets/wc-big.png" alt="">
