--- a/html/index.html
+++ b/html/index.html
@@ -98,7 +98,7 @@
                     
                 </div>    
                 <div class="reviewer">
-                    <img class="img3" src="/Picture/Assets/avatar.png" alt="">
+                    <img class="img3" src="../Picture/Assets/avatar.png" alt="">
                     <div class="j22">
                         <h5 class="rev">Reviewer Name</h5>
                     <p class="date">Date</p>
@@ -122,7 +122,7 @@
                     
                 </div>    
                 <div class="reviewer">
-                    <img class="img3" src="/Picture/Assets/avatar.png" alt="">
+                    <img class="img3" src="../Picture/Assets/avatar.png" alt="">
                     <div class="j22">
                         <h5 class="rev">Reviewer Name</h5>
                     <p class="date">Date</p>
@@ -140,7 +140,7 @@
                 <li><a href=""><button class="sec3-button">Shop Now</button></a></li>
             </ul>
             <div>
-                <img class="sec3-img" src="/Picture/Assets/wc-big.png" alt="">
+                <img class="sec3-img" src="../Picture/Assets/wc-big.png" alt="">
             </div>
         </section>
 
