--- a/html/index.html
+++ b/html/index.html
@@ -140,7 +140,7 @@
                 <li><a href=""><button class="sec3-button">Shop Now</button></a></li>
             </ul>
             <div>
-                <img class="sec3-img" src="../Picture/Assets/wc-big.pnggit" alt="">
+                <img class="sec3-img" src="../Picture/Assets/wc-big.png" alt="">
             </div>
         </section>
 
